--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,7 @@ name: Deploy static site to EC2
 
 on:
   push:
-    branches: [ "main" ]
-  workflow_dispatch:
+    branches: [ "main", "workflow_dispatch" ]
 
 jobs:
   deploy:
@@ -12,28 +11,29 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Prepare SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H "${{ secrets.EC2_HOST }}" >> ~/.ssh/known_hosts
+
       - name: Copy files via SSH
         uses: appleboy/scp-action@v1
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "."
-          target: "/home/${{ secrets.EC2_USER }}/temp"
-          strip_components: 0 # Ensures full folder structure is preserved
+          source: ./
+          target: /home/${{ secrets.EC2_USER }}/temp
 
-      - name: Execute remote SSH commands
+      - name: Execute remote SSH commands to copy from temp to real folder
         uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # Create target directory if it doesn't exist
-            sudo mkdir -p /usr/site/
-            # Move files from temp to real folder
             sudo cp -r /home/${{ secrets.EC2_USER }}/temp/* /usr/site/
-            # Clean up temp
-            rm -rf /home/${{ secrets.EC2_USER }}/temp
-            # Reload Nginx
+            sudo rm -rf /home/${{ secrets.EC2_USER }}/temp
             sudo nginx -t && sudo systemctl reload nginx
